--- a/index.html
+++ b/index.html
@@ -39,50 +39,46 @@
         </div>
       </div>
       <div class="row">
-        <div class='col page-main'>
-          <div class='row'>
-            <div class="col-7">
-              <div>
-                <p class="page-main">
-                I've recently converted this page from Markdown to HTML, so it's going to appear more barebones as I work on it, especially without knowledge of CSS (yet!).
-                </p>
-                <p class="page-main">
-                In the meantime, please enjoy these penguins, courtesy of Wikimedia.
-                </p>
+        <div class='col-7 page-main'>
+          <div>
+            <p class="page-main">
+            I've recently converted this page from Markdown to HTML, so it's going to appear more barebones as I work on it, especially without knowledge of CSS (yet!).
+            </p>
+            <p class="page-main">
+            In the meantime, please enjoy these penguins, courtesy of Wikimedia.
+            </p>
+          </div>
+        </div>
+        <div class="col-5 carousel">
+          <div id="penguinSlidesControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Gorfou_sauteur_-_Rockhopper_Penguin.jpg" class="d-block h-100 w-100" alt="penguin">
+              </div>
+              <div class="carousel-item">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Penguins_walking_-Moltke_Harbour%2C_South_Georgia%2C_British_overseas_territory%2C_UK-8.jpg" class="d-block w-100 h-100" alt="penguin">
+              </div>
+              <div class="carousel-item">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Emperor-pubs_hg.jpg" class="d-block w-100 h-auto" alt="penguin">
+              </div>
+              <div class="carousel-item">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/2/25/EmperorPenguinChick.jpg" class="d-block w-100 h-auto" alt="penguin">
+              </div>
+              <div class="carousel-item">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Aptenodytes_patagonicus_-Asahiyama_Zoo_%282008.9.13%29_270.jpg" class="d-block w-100 h-auto" alt="penguin">
+              </div>
+              <div class="carousel-item">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" class="d-block w-100 h-auto" alt="penguin">
               </div>
             </div>
-            <div class="col-5">
-              <div id="penguinSlidesControls" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Gorfou_sauteur_-_Rockhopper_Penguin.jpg" class="d-block h-100 w-100" alt="penguin">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Penguins_walking_-Moltke_Harbour%2C_South_Georgia%2C_British_overseas_territory%2C_UK-8.jpg" class="d-block w-100 h-100" alt="penguin">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Emperor-pubs_hg.jpg" class="d-block w-100 h-auto" alt="penguin">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/25/EmperorPenguinChick.jpg" class="d-block w-100 h-auto" alt="penguin">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Aptenodytes_patagonicus_-Asahiyama_Zoo_%282008.9.13%29_270.jpg" class="d-block w-100 h-auto" alt="penguin">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" class="d-block w-100 h-auto" alt="penguin">
-                  </div>
-                </div>
-                <a class="carousel-control-prev" data-target="#penguinSlidesControls" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" data-target="#penguinSlidesControls" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
-            </div>
+            <a class="carousel-control-prev" data-target="#penguinSlidesControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" data-target="#penguinSlidesControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
         </div>
       </div>
