--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles/style.css">
     <title>CISC275 Portfolio (Linderman)</title>
   </head>
@@ -51,6 +52,14 @@
         </div>
         <div class="col-5 carousel">
           <div id="penguinSlidesControls" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#penguinSlidesControls" data-slide-to="0" class="active"></li>
+              <li data-target="#penguinSlidesControls" data-slide-to="1"></li>
+              <li data-target="#penguinSlidesControls" data-slide-to="2"></li>
+              <li data-target="#penguinSlidesControls" data-slide-to="3"></li>
+              <li data-target="#penguinSlidesControls" data-slide-to="4"></li>
+              <li data-target="#penguinSlidesControls" data-slide-to="5"></li>
+            </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Gorfou_sauteur_-_Rockhopper_Penguin.jpg" class="d-block h-100 w-100" alt="penguin">
