--- a/Changelog.html
+++ b/Changelog.html
@@ -110,6 +110,23 @@
                     <p>I found CSS layout (and Bootstrap) simple in concept, but complicated and a bit frustrating when applied to an entire page (or more). I'd hoped to set up a simple but clean layout for my page, but I've had to settle for smaller improvements. Likely, I tried to do too much at once, and should instead work on a plan for specific items.</p>
                 </div>
             </div>
+            <div id="milestone3">
+                <h2>Milestone 3</h2>
+                <div class="added">
+                    <h3>Added</h3>
+                    <h4>09/23/2021</h4>
+                    <p>-Completed <a href="https://www.codecademy.com/learn/learn-typescript">Codecademy's Typescript tutorial</a></p>
+                    <img src="./media/Typescript Complete_Linderman.png" style="width:400px;height:auto;"/>
+                    <br>
+                </div>
+                <div class="changed">
+                    <h3>Changed</h3>
+                    <br>
+                </div>
+                <div class='notes'>
+                    <h3>Notes</h3>
+                </div>
+            </div>
         </main>
     </body>
   </html>
